fix: fixed z-index header and hover article

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ header {
     width: 100%;
     background-color: #ff6900 ;
     position: fixed;
+    z-index: 3;
 }
 
 
@@ -90,7 +91,7 @@ div.articles img {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 99;
+    z-index: 2;
 }
 
 .articles:hover .img-top {
